# firehose-outputs

./: .gitignore  NOTICE  meson.build  meson_options.txt  pyproject.toml
aspn-ros/src/aspn23_ros_interfaces/: CMakeLists.txt  package.xml
dds/: meson.build
dds/cpp/: CMakeLists.txt  meson.build
dds/cpp/aspn23_dds/: MeasurementAccumulatedDistanceTraveled.cxx  MeasurementAccumulatedDistanceTraveled.h  MeasurementAccumulatedDistanceTraveledCdrAux.hpp  MeasurementAccumulatedDistanceTraveledCdrAux.ipp  MeasurementAccumulatedDistanceTraveledPubSubTypes.cxx  MeasurementAccumulatedDistanceTraveledPubSubTypes.h  MeasurementAltitude.cxx  MeasurementAltitude.h  MeasurementAltitudeCdrAux.hpp  MeasurementAltitudeCdrAux.ipp  MeasurementAltitudePubSubTypes.cxx  MeasurementAltitudePubSubTypes.h  MeasurementAngularVelocity.cxx  MeasurementAngularVelocity.h  MeasurementAngularVelocity1D.cxx  MeasurementAngularVelocity1D.h  MeasurementAngularVelocity1DCdrAux.hpp  MeasurementAngularVelocity1DCdrAux.ipp  MeasurementAngularVelocity1DPubSubTypes.cxx  MeasurementAngularVelocity1DPubSubTypes.h  MeasurementAngularVelocityCdrAux.hpp  MeasurementAngularVelocityCdrAux.ipp  MeasurementAngularVelocityPubSubTypes.cxx  MeasurementAngularVelocityPubSubTypes.h  MeasurementAttitude2D.cxx  MeasurementAttitude2D.h  MeasurementAttitude2DCdrAux.hpp  MeasurementAttitude2DCdrAux.ipp  MeasurementAttitude2DPubSubTypes.cxx  MeasurementAttitude2DPubSubTypes.h  MeasurementAttitude3D.cxx  MeasurementAttitude3D.h  MeasurementAttitude3DCdrAux.hpp  MeasurementAttitude3DCdrAux.ipp  MeasurementAttitude3DPubSubTypes.cxx  MeasurementAttitude3DPubSubTypes.h  MeasurementBarometer.cxx  MeasurementBarometer.h  MeasurementBarometerCdrAux.hpp  MeasurementBarometerCdrAux.ipp  (+350 more)
dds/cpp/cmake/: aspn23_ddsConfig.cmake.in
dds/idl/aspn23_dds/: MeasurementAccumulatedDistanceTraveled.idl  MeasurementAltitude.idl  MeasurementAngularVelocity.idl  MeasurementAngularVelocity1D.idl  MeasurementAttitude2D.idl  MeasurementAttitude3D.idl  MeasurementBarometer.idl  MeasurementDeltaPosition.idl  MeasurementDeltaRange.idl  MeasurementDeltaRangeToPoint.idl  MeasurementDirection2DToPoints.idl  MeasurementDirection3DToPoints.idl  MeasurementDirectionOfMotion2D.idl  MeasurementDirectionOfMotion3D.idl  MeasurementFrequencyDifference.idl  MeasurementHeading.idl  MeasurementImage.idl  MeasurementImu.idl  MeasurementMagneticField.idl  MeasurementMagneticFieldMagnitude.idl  MeasurementPosition.idl  MeasurementPositionAttitude.idl  MeasurementPositionVelocityAttitude.idl  MeasurementRangeRateToPoint.idl  MeasurementRangeToPoint.idl  MeasurementSatnav.idl  MeasurementSatnavSubframe.idl  MeasurementSatnavWithSvData.idl  MeasurementSpecificForce1D.idl  MeasurementSpeed.idl  MeasurementTdoa1Tx2Rx.idl  MeasurementTdoa2Tx1Rx.idl  MeasurementTemperature.idl  MeasurementTime.idl  MeasurementTimeDifference.idl  MeasurementTimeFrequencyDifference.idl  MeasurementVelocity.idl  MetadataBeidouEphemeris.idl  MetadataGalileoEphemeris.idl  MetadataGeneric.idl  (+25 more)
lcm/: build.gradle  meson.build
lcm/c/: meson.build
lcm/c/include/: aspn23_lcm_measurement_IMU.h  aspn23_lcm_measurement_TDOA_1Tx_2Rx.h  aspn23_lcm_measurement_TDOA_2Tx_1Rx.h  aspn23_lcm_measurement_accumulated_distance_traveled.h  aspn23_lcm_measurement_altitude.h  aspn23_lcm_measurement_angular_velocity.h  aspn23_lcm_measurement_angular_velocity_1d.h  aspn23_lcm_measurement_attitude_2d.h  aspn23_lcm_measurement_attitude_3d.h  aspn23_lcm_measurement_barometer.h  aspn23_lcm_measurement_delta_position.h  aspn23_lcm_measurement_delta_range.h  aspn23_lcm_measurement_delta_range_to_point.h  aspn23_lcm_measurement_direction_2d_to_points.h  aspn23_lcm_measurement_direction_3d_to_points.h  aspn23_lcm_measurement_direction_of_motion_2d.h  aspn23_lcm_measurement_direction_of_motion_3d.h  aspn23_lcm_measurement_frequency_difference.h  aspn23_lcm_measurement_heading.h  aspn23_lcm_measurement_image.h  aspn23_lcm_measurement_magnetic_field.h  aspn23_lcm_measurement_magnetic_field_magnitude.h  aspn23_lcm_measurement_position.h  aspn23_lcm_measurement_position_attitude.h  aspn23_lcm_measurement_position_velocity_attitude.h  aspn23_lcm_measurement_range_rate_to_point.h  aspn23_lcm_measurement_range_to_point.h  aspn23_lcm_measurement_satnav.h  aspn23_lcm_measurement_satnav_subframe.h  aspn23_lcm_measurement_satnav_with_sv_data.h  aspn23_lcm_measurement_specific_force_1d.h  aspn23_lcm_measurement_speed.h  aspn23_lcm_measurement_temperature.h  aspn23_lcm_measurement_time.h  aspn23_lcm_measurement_time_difference.h  aspn23_lcm_measurement_time_frequency_difference.h  aspn23_lcm_measurement_velocity.h  aspn23_lcm_metadata_BeiDou_ephemeris.h  aspn23_lcm_metadata_GLONASS_ephemeris.h  aspn23_lcm_metadata_GPS_Cnav_ephemeris.h  (+25 more)
lcm/c/src/: aspn23_lcm_measurement_IMU.c  aspn23_lcm_measurement_TDOA_1Tx_2Rx.c  aspn23_lcm_measurement_TDOA_2Tx_1Rx.c  aspn23_lcm_measurement_accumulated_distance_traveled.c  aspn23_lcm_measurement_altitude.c  aspn23_lcm_measurement_angular_velocity.c  aspn23_lcm_measurement_angular_velocity_1d.c  aspn23_lcm_measurement_attitude_2d.c  aspn23_lcm_measurement_attitude_3d.c  aspn23_lcm_measurement_barometer.c  aspn23_lcm_measurement_delta_position.c  aspn23_lcm_measurement_delta_range.c  aspn23_lcm_measurement_delta_range_to_point.c  aspn23_lcm_measurement_direction_2d_to_points.c  aspn23_lcm_measurement_direction_3d_to_points.c  aspn23_lcm_measurement_direction_of_motion_2d.c  aspn23_lcm_measurement_direction_of_motion_3d.c  aspn23_lcm_measurement_frequency_difference.c  aspn23_lcm_measurement_heading.c  aspn23_lcm_measurement_image.c  aspn23_lcm_measurement_magnetic_field.c  aspn23_lcm_measurement_magnetic_field_magnitude.c  aspn23_lcm_measurement_position.c  aspn23_lcm_measurement_position_attitude.c  aspn23_lcm_measurement_position_velocity_attitude.c  aspn23_lcm_measurement_range_rate_to_point.c  aspn23_lcm_measurement_range_to_point.c  aspn23_lcm_measurement_satnav.c  aspn23_lcm_measurement_satnav_subframe.c  aspn23_lcm_measurement_satnav_with_sv_data.c  (+35 more)
lcm/cpp/: meson.build
lcm/python/: pyproject.toml
(+3311 files in other folders)
