
aspn_lcm_c_inc = include_directories('include', is_system : true)

aspn_lcm_c_srcs = [
	'src/aspn23_lcm_type_direction_2d_to_point.c',
	'src/aspn23_lcm_type_direction_3d_to_point.c',
	'src/aspn23_lcm_type_header.c',
	'src/aspn23_lcm_type_image_feature.c',
	'src/aspn23_lcm_type_integrity.c',
	'src/aspn23_lcm_type_kepler_orbit.c',
	'src/aspn23_lcm_type_metadataheader.c',
	'src/aspn23_lcm_type_mounting.c',
	'src/aspn23_lcm_type_remote_point.c',
	'src/aspn23_lcm_type_satnav_clock.c',
	'src/aspn23_lcm_type_satnav_obs.c',
	'src/aspn23_lcm_type_satnav_satellite_system.c',
	'src/aspn23_lcm_type_satnav_signal_descriptor.c',
	'src/aspn23_lcm_type_satnav_sv_data.c',
	'src/aspn23_lcm_type_satnav_time.c',
	'src/aspn23_lcm_type_timestamp.c',
	'src/aspn23_lcm_metadata_BeiDou_ephemeris.c',
	'src/aspn23_lcm_metadata_GLONASS_ephemeris.c',
	'src/aspn23_lcm_metadata_GPS_Cnav_ephemeris.c',
	'src/aspn23_lcm_metadata_GPS_Lnav_ephemeris.c',
	'src/aspn23_lcm_metadata_GPS_Mnav_ephemeris.c',
	'src/aspn23_lcm_metadata_GPS_iono_utc_parameters.c',
	'src/aspn23_lcm_metadata_Galileo_ephemeris.c',
	'src/aspn23_lcm_metadata_IMU.c',
	'src/aspn23_lcm_metadata_generic.c',
	'src/aspn23_lcm_metadata_image_features.c',
	'src/aspn23_lcm_metadata_magnetic_field.c',
	'src/aspn23_lcm_metadata_satnav_obs.c',
	'src/aspn23_lcm_measurement_IMU.c',
	'src/aspn23_lcm_measurement_TDOA_1Tx_2Rx.c',
	'src/aspn23_lcm_measurement_TDOA_2Tx_1Rx.c',
	'src/aspn23_lcm_measurement_accumulated_distance_traveled.c',
	'src/aspn23_lcm_measurement_altitude.c',
	'src/aspn23_lcm_measurement_angular_velocity.c',
	'src/aspn23_lcm_measurement_angular_velocity_1d.c',
	'src/aspn23_lcm_measurement_attitude_2d.c',
	'src/aspn23_lcm_measurement_attitude_3d.c',
	'src/aspn23_lcm_measurement_barometer.c',
	'src/aspn23_lcm_measurement_delta_position.c',
	'src/aspn23_lcm_measurement_delta_range.c',
	'src/aspn23_lcm_measurement_delta_range_to_point.c',
	'src/aspn23_lcm_measurement_direction_2d_to_points.c',
	'src/aspn23_lcm_measurement_direction_3d_to_points.c',
	'src/aspn23_lcm_measurement_direction_of_motion_2d.c',
	'src/aspn23_lcm_measurement_direction_of_motion_3d.c',
	'src/aspn23_lcm_measurement_frequency_difference.c',
	'src/aspn23_lcm_measurement_heading.c',
	'src/aspn23_lcm_measurement_image.c',
	'src/aspn23_lcm_measurement_magnetic_field.c',
	'src/aspn23_lcm_measurement_magnetic_field_magnitude.c',
	'src/aspn23_lcm_measurement_position.c',
	'src/aspn23_lcm_measurement_position_attitude.c',
	'src/aspn23_lcm_measurement_position_velocity_attitude.c',
	'src/aspn23_lcm_measurement_range_rate_to_point.c',
	'src/aspn23_lcm_measurement_range_to_point.c',
	'src/aspn23_lcm_measurement_satnav.c',
	'src/aspn23_lcm_measurement_satnav_subframe.c',
	'src/aspn23_lcm_measurement_satnav_with_sv_data.c',
	'src/aspn23_lcm_measurement_specific_force_1d.c',
	'src/aspn23_lcm_measurement_speed.c',
	'src/aspn23_lcm_measurement_temperature.c',
	'src/aspn23_lcm_measurement_time.c',
	'src/aspn23_lcm_measurement_time_difference.c',
	'src/aspn23_lcm_measurement_time_frequency_difference.c',
	'src/aspn23_lcm_measurement_velocity.c',
]


override_options_lcm = []
if lcm_dep.version().version_compare('<1.5.0')
    override_options_lcm = 'warning_level=0'
endif

aspn_lcm_c_lib = static_library('aspn-lcm',
                            sources: aspn_lcm_c_srcs,
                            include_directories: aspn_lcm_c_inc,
                            dependencies: lcm_dep,
                            override_options: override_options_lcm)
aspn_lcm_c_dep = declare_dependency(include_directories: aspn_lcm_c_inc,
                                    link_with: aspn_lcm_c_lib)
meson.override_dependency('aspn23-lcm', aspn_lcm_c_dep)
